--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,18 +1,17 @@
-version: 2.1
-orbs:
-  ruby: circleci/ruby@0.1.2 
-
+version: 2
 jobs:
   build:
     docker:
-      - image: circleci/ruby:2.6.3-stretch-node
-    executor: ruby/default
+      - image: circleci/ruby:2.6.5
     steps:
       - checkout
-      - run:
-          name: Force Bundler Version
+- run:
+    name: Force Bundler Version
     command: |
       sudo gem update --system
       echo 'export BUNDLER_VERSION=$(cat Gemfile.lock | tail -1 | tr -d " ")' >> $BASH_ENV
       source $BASH_ENV
       gem install bundler
+      - run:
+          name: Do Anything Bundler Related
+          command: bundler -v
